# jarvis

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build.yml  ci.yml
config/: default.toml  test.toml
cql/: schema.cql  schema_keyspace.cql  schema_keyspace_dev.cql  schema_keyspace_test.cql  schema_table.cql
crates/axum-web/: Cargo.toml
crates/axum-web/src/: context.rs  erring.rs
crates/scylla-orm/: Cargo.toml
crates/scylla-orm-macros/: Cargo.toml
src/: api.rs  conf.rs  context.rs  erring.rs  json_util.rs  lang.rs  main.rs  model.rs  object.rs  openai.rs  router.rs  tokenizer.rs
src/api/: embedding.rs  message_translating.rs  mod.rs  summarizing.rs  translating.rs
src/db/: mod.rs  model_counter.rs  model_embedding.rs  model_summarizing.rs  model_translating.rs  qdrant.rs  redis.rs  scylladb.rs
tests/: generate_language_list.rs  languages.json
