[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"
description = ""
publish = false
repository = "https://github.com/yiwen-ai/jarvis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-openai = "0.10"
axum = { version = "0.6", features = [
  "headers",
  "http1",
  "http2",
  "json",
  "macros",
  "matched-path",
  "tokio",
  "tower-log",
  "query",
], default-features = false }
config = "0.13"
futures-util = "0.3.28"
hyper = "0.14"
lingua = "1.4"
log = "0.4"
reqwest = { version = "0.11", features = [
  "default-tls",
  "json",
  "gzip",
  "trust-dns",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
structured-logger = "0.5"
tiktoken-rs = "0.4.2"
tokio = { version = "1.28", features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
], default-features = false }
tower = "0.4"
tower-http = { version = "0.4.0", features = [
  "catch-panic",
  "compression-gzip",
  "compression-zstd",
  "decompression-gzip",
  "decompression-zstd",
  "propagate-header",
] }
uuid = { version = "1.3", features = ["fast-rng", "v4"] }

[profile.release]
lto = true
