[package]
name = "jarvis"
version = "0.1.1"
edition = "2021"
rust-version = "1.64"
description = ""
publish = false
repository = "https://github.com/yiwen-ai/jarvis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-openai = "0.10"
async-trait = "0.1"
axum = { version = "0.6", features = [
  "headers",
  "http1",
  "http2",
  "json",
  "macros",
  "matched-path",
  "tokio",
  "tower-log",
  "query",
], default-features = true }
bytes = "1.4"
ciborium = "0.2"
ciborium-io = "0.2"
config = "0.13"
crc32fast = "1.3"
futures-util = "0.3"
hyper = "0.14"
lingua = "1.4"
log = "0.4"
mime = "0.3"
qdrant-client = "1.2"
reqwest = { version = "0.11", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "json",
  "gzip",
  "trust-dns",
], default-features = false }
scylla = "0.8"
serde = "1.0"
serde_json = "1.0"
structured-logger = "1.0"
tiktoken-rs = "0.4"
tokio = { version = "1.28", features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
], default-features = true }
tower = "0.4"
tower-http = { version = "0.4", features = [
  "catch-panic",
  "compression-gzip",
  "compression-zstd",
  "decompression-gzip",
  "decompression-zstd",
  "propagate-header",
] }
uuid = { version = "1.3", features = ["fast-rng", "v4", "v8"] }
xid = "1.0"

[profile.release]
lto = true
